<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Conf.BaseLayout"
    >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/default_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_button"
            android:layout_weight="1"
            />
    </LinearLayout>
<ScrollView
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:id="@+id/LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:text="@string/bg_seekbar_title"
        style="@style/Conf.HeaderTitle"
        />
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/bg_seekbar_title_a"
            android:text="@string/alpha"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/bg_seekbar_a"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/bg_seekbar_title_r"
            android:text="@string/red"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/bg_seekbar_r"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/bg_seekbar_title_g"
            android:text="@string/green"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/bg_seekbar_g"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/bg_seekbar_title_b"
            android:text="@string/blue"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/bg_seekbar_b"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/not_zero_text_seekbar_title"
        android:text="@string/not_zero_text_seekbar_title"
        style="@style/Conf.HeaderTitle"
        />
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_a"
            android:text="@string/alpha"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_a"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_r"
            android:text="@string/red"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_r"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_g"
            android:text="@string/green"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_g"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/not_zero_text_seekbar_title_b"
            android:text="@string/blue"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/not_zero_text_seekbar_b"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/zero_text_seekbar_title"
        android:text="@string/zero_text_seekbar_title"
        style="@style/Conf.HeaderTitle"
        />
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_a"
            android:text="@string/alpha"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_a"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_r"
            android:text="@string/red"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_r"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_g"
            android:text="@string/green"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_g"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Conf.SeekBarRowLayout"
        >
        <TextView
            android:id="@+id/zero_text_seekbar_title_b"
            android:text="@string/blue"
            style="@style/Conf.SeekBarText"
            />
        <SeekBar
            android:id="@+id/zero_text_seekbar_b"
            style="@style/Conf.SeekBar"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>
